resolve conflict readme
