# chat-api/gen/http/chatapi/server/paths.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.3.1, DO NOT EDIT.
+// Code generated by goa v3.4.3, DO NOT EDIT.
 //
 // HTTP request path constructors for the chatapi service.
 //
@@ -7,7 +7,11 @@
 
 package server
 
+import (
+	"fmt"
+)
+
 // GetchatChatapiPath returns the URL path to the chatapi service getchat HTTP endpoint.
-func GetchatChatapiPath() string {
-	return "/mypage/chatroom{id}"
+func GetchatChatapiPath(id int) string {
+	return fmt.Sprintf("/chatroom/%v", id)
 }
