# chat-api/gen/http/chatapi/server/server.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.3.1, DO NOT EDIT.
+// Code generated by goa v3.4.3, DO NOT EDIT.
 //
 // chatapi HTTP server
 //
@@ -14,12 +14,14 @@ import (
 
 	goahttp "goa.design/goa/v3/http"
 	goa "goa.design/goa/v3/pkg"
+	"goa.design/plugins/v3/cors"
 )
 
 // Server lists the chatapi service endpoint HTTP handlers.
 type Server struct {
 	Mounts  []*MountPoint
 	Getchat http.Handler
+	CORS    http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -55,9 +57,11 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
-			{"Getchat", "GET", "/mypage/chatroom{id}"},
+			{"Getchat", "GET", "/chatroom/{id}"},
+			{"CORS", "OPTIONS", "/chatroom/{id}"},
 		},
 		Getchat: NewGetchatHandler(e.Getchat, mux, decoder, encoder, errhandler, formatter),
+		CORS:    NewCORSHandler(),
 	}
 }
 
@@ -67,23 +71,25 @@ func (s *Server) Service() string { return "chatapi" }
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.Getchat = m(s.Getchat)
+	s.CORS = m(s.CORS)
 }
 
 // Mount configures the mux to serve the chatapi endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountGetchatHandler(mux, h.Getchat)
+	MountCORSHandler(mux, h.CORS)
 }
 
 // MountGetchatHandler configures the mux to serve the "chatapi" service
 // "getchat" endpoint.
 func MountGetchatHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
+	f, ok := HandleChatapiOrigin(h).(http.HandlerFunc)
 	if !ok {
 		f = func(w http.ResponseWriter, r *http.Request) {
 			h.ServeHTTP(w, r)
 		}
 	}
-	mux.Handle("GET", "/mypage/chatroom{id}", f)
+	mux.Handle("GET", "/chatroom/{id}", f)
 }
 
 // NewGetchatHandler creates a HTTP handler which loads the HTTP request and
@@ -122,5 +128,53 @@ func NewGetchatHandler(
 		if err := encodeResponse(ctx, w, res); err != nil {
 			errhandler(ctx, w, err)
 		}
+	})
+}
+
+// MountCORSHandler configures the mux to serve the CORS endpoints for the
+// service chatapi.
+func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
+	h = HandleChatapiOrigin(h)
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("OPTIONS", "/chatroom/{id}", f)
+}
+
+// NewCORSHandler creates a HTTP handler which returns a simple 200 response.
+func NewCORSHandler() http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(200)
+	})
+}
+
+// HandleChatapiOrigin applies the CORS response headers corresponding to the
+// origin for the service chatapi.
+func HandleChatapiOrigin(h http.Handler) http.Handler {
+	origHndlr := h.(http.HandlerFunc)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		origin := r.Header.Get("Origin")
+		if origin == "" {
+			// Not a CORS request
+			origHndlr(w, r)
+			return
+		}
+		if cors.MatchOrigin(origin, "http://172.25.0.2") {
+			w.Header().Set("Access-Control-Allow-Origin", origin)
+			w.Header().Set("Vary", "Origin")
+			w.Header().Set("Access-Control-Allow-Credentials", "true")
+			if acrm := r.Header.Get("Access-Control-Request-Method"); acrm != "" {
+				// We are handling a preflight request
+				w.Header().Set("Access-Control-Allow-Methods", "GET")
+				w.Header().Set("Access-Control-Allow-Headers", "Access-Control-Allow-Origin, Authorization")
+			}
+			origHndlr(w, r)
+			return
+		}
+		origHndlr(w, r)
+		return
 	})
 }
