# chat-api/gen/http/chatapi/server/types.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.3.1, DO NOT EDIT.
+// Code generated by goa v3.4.3, DO NOT EDIT.
 //
 // chatapi HTTP server types
 //
@@ -10,16 +10,7 @@ package server
 import (
 	chatapi "chat-api/gen/chatapi"
 	chatapiviews "chat-api/gen/chatapi/views"
-
-	goa "goa.design/goa/v3/pkg"
 )
-
-// GetchatRequestBody is the type of the "chatapi" service "getchat" endpoint
-// HTTP request body.
-type GetchatRequestBody struct {
-	// room id
-	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
-}
 
 // GoaChatResponseCollection is the type of the "chatapi" service "getchat"
 // endpoint HTTP response body.
@@ -28,7 +19,7 @@ type GoaChatResponseCollection []*GoaChatResponse
 // GoaChatResponse is used to define fields on response body types.
 type GoaChatResponse struct {
 	// room id
-	ID int `form:"id" json:"id" xml:"id"`
+	ID int `form:"Id" json:"Id" xml:"Id"`
 	// user id
 	UserID string `form:"UserId" json:"UserId" xml:"UserId"`
 	// room name
@@ -51,18 +42,10 @@ func NewGoaChatResponseCollection(res chatapiviews.GoaChatCollectionView) GoaCha
 }
 
 // NewGetchatPayload builds a chatapi service getchat endpoint payload.
-func NewGetchatPayload(body *GetchatRequestBody) *chatapi.GetchatPayload {
-	v := &chatapi.GetchatPayload{
-		ID: *body.ID,
-	}
+func NewGetchatPayload(id int, key string) *chatapi.GetchatPayload {
+	v := &chatapi.GetchatPayload{}
+	v.ID = id
+	v.Key = key
 
 	return v
-}
-
-// ValidateGetchatRequestBody runs the validations defined on GetchatRequestBody
-func ValidateGetchatRequestBody(body *GetchatRequestBody) (err error) {
-	if body.ID == nil {
-		err = goa.MergeErrors(err, goa.MissingFieldError("id", "body"))
-	}
-	return
 }
