# chat-api/gen/http/openapi3.yaml
@@ -4,22 +4,25 @@ info:
   description: Service for chat app, a Goa teaser
   version: "1.0"
 servers:
-- url: http://172.25.0.2:8000
+- url: http://172.25.0.4:8000
 paths:
-  /mypage/chatroom{id}:
+  /chatroom/{id}:
     get:
       tags:
       - chatapi
       summary: getchat chatapi
       operationId: chatapi#getchat
-      requestBody:
+      parameters:
+      - name: id
+        in: path
+        description: room id
         required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GetchatRequestBody'
-            example:
-              id: 4241678195779654278
+        schema:
+          type: integer
+          description: room id
+          example: 6695761884599171057
+          format: int64
+        example: 2956765006061687337
       responses:
         "200":
           description: OK response.
@@ -28,82 +31,72 @@ paths:
               schema:
                 $ref: '#/components/schemas/GoaChatCollection'
               example:
-              - Chat: Voluptas quod qui.
-                Member: Voluptatem rerum rerum neque assumenda.
-                PostDt: "2013-12-17T20:03:48Z"
-                RoomName: Culpa id suscipit rem voluptates.
-                UserId: Omnis molestiae.
-                id: 714744356156329433
-              - Chat: Voluptas quod qui.
-                Member: Voluptatem rerum rerum neque assumenda.
-                PostDt: "2013-12-17T20:03:48Z"
-                RoomName: Culpa id suscipit rem voluptates.
-                UserId: Omnis molestiae.
-                id: 714744356156329433
-              - Chat: Voluptas quod qui.
-                Member: Voluptatem rerum rerum neque assumenda.
-                PostDt: "2013-12-17T20:03:48Z"
-                RoomName: Culpa id suscipit rem voluptates.
-                UserId: Omnis molestiae.
-                id: 714744356156329433
-              - Chat: Voluptas quod qui.
-                Member: Voluptatem rerum rerum neque assumenda.
-                PostDt: "2013-12-17T20:03:48Z"
-                RoomName: Culpa id suscipit rem voluptates.
-                UserId: Omnis molestiae.
-                id: 714744356156329433
+              - Chat: Aut numquam similique.
+                Id: 5625972352155160976
+                Member: Nihil debitis magnam dolorem qui praesentium iure.
+                PostDt: "1985-11-21T12:48:29Z"
+                RoomName: Eveniet voluptas quod qui.
+                UserId: Rem voluptates nam voluptatem rerum rerum neque.
+              - Chat: Aut numquam similique.
+                Id: 5625972352155160976
+                Member: Nihil debitis magnam dolorem qui praesentium iure.
+                PostDt: "1985-11-21T12:48:29Z"
+                RoomName: Eveniet voluptas quod qui.
+                UserId: Rem voluptates nam voluptatem rerum rerum neque.
+              - Chat: Aut numquam similique.
+                Id: 5625972352155160976
+                Member: Nihil debitis magnam dolorem qui praesentium iure.
+                PostDt: "1985-11-21T12:48:29Z"
+                RoomName: Eveniet voluptas quod qui.
+                UserId: Rem voluptates nam voluptatem rerum rerum neque.
+              - Chat: Aut numquam similique.
+                Id: 5625972352155160976
+                Member: Nihil debitis magnam dolorem qui praesentium iure.
+                PostDt: "1985-11-21T12:48:29Z"
+                RoomName: Eveniet voluptas quod qui.
+                UserId: Rem voluptates nam voluptatem rerum rerum neque.
+      security:
+      - api_key_header_Authorization: []
 components:
   schemas:
-    GetchatRequestBody:
-      type: object
-      properties:
-        id:
-          type: integer
-          description: room id
-          example: 3920112313714889688
-          format: int64
-      example:
-        id: 7692538195343632805
-      required:
-      - id
     GoaChat:
       type: object
       properties:
         Chat:
           type: string
           description: chat
-          example: Molestias dolorem soluta quo itaque.
+          example: Laudantium vero.
+        Id:
+          type: integer
+          description: room id
+          example: 640788961093116736
+          format: int64
         Member:
           type: string
           description: member
-          example: Natus fuga laboriosam error inventore.
+          example: Quidem labore.
         PostDt:
           type: string
-          example: "2001-06-05T10:45:12Z"
+          example: "1978-01-10T02:49:41Z"
           format: date-time
         RoomName:
           type: string
           description: room name
-          example: Autem est.
+          example: Voluptas dicta totam.
         UserId:
           type: string
           description: user id
-          example: Quam ut doloremque repudiandae ipsam ipsum.
-        id:
-          type: integer
-          description: room id
-          example: 5086574025736755178
-          format: int64
+          example: Reiciendis delectus iusto sit aut accusamus.
       description: All chat
       example:
-        Chat: Aperiam numquam quibusdam dolor quasi impedit.
-        Member: Debitis et.
-        PostDt: "1992-02-25T17:16:00Z"
-        RoomName: Temporibus in provident perspiciatis.
-        UserId: Consequatur repudiandae sunt non excepturi.
-        id: 5878810414157911307
+        Chat: Eveniet quaerat voluptate.
+        Id: 521771140489782364
+        Member: Qui aut veniam eligendi sint at.
+        PostDt: "1995-04-05T10:49:56Z"
+        RoomName: Eius aut quidem dolorum in aspernatur.
+        UserId: Quasi impedit nemo rerum aut iusto necessitatibus.
       required:
-      - id
+      - Id
       - UserId
       - RoomName
       - Member
@@ -114,21 +107,30 @@ components:
       items:
         $ref: '#/components/schemas/GoaChat'
       example:
-      - Chat: Voluptas quod qui.
-        Member: Voluptatem rerum rerum neque assumenda.
-        PostDt: "2013-12-17T20:03:48Z"
-        RoomName: Culpa id suscipit rem voluptates.
-        UserId: Omnis molestiae.
-        id: 714744356156329433
-      - Chat: Voluptas quod qui.
-        Member: Voluptatem rerum rerum neque assumenda.
-        PostDt: "2013-12-17T20:03:48Z"
-        RoomName: Culpa id suscipit rem voluptates.
-        UserId: Omnis molestiae.
-        id: 714744356156329433
-      - Chat: Voluptas quod qui.
-        Member: Voluptatem rerum rerum neque assumenda.
-        PostDt: "2013-12-17T20:03:48Z"
-        RoomName: Culpa id suscipit rem voluptates.
-        UserId: Omnis molestiae.
-        id: 714744356156329433
+      - Chat: Aut numquam similique.
+        Id: 5625972352155160976
+        Member: Nihil debitis magnam dolorem qui praesentium iure.
+        PostDt: "1985-11-21T12:48:29Z"
+        RoomName: Eveniet voluptas quod qui.
+        UserId: Rem voluptates nam voluptatem rerum rerum neque.
+      - Chat: Aut numquam similique.
+        Id: 5625972352155160976
+        Member: Nihil debitis magnam dolorem qui praesentium iure.
+        PostDt: "1985-11-21T12:48:29Z"
+        RoomName: Eveniet voluptas quod qui.
+        UserId: Rem voluptates nam voluptatem rerum rerum neque.
+      - Chat: Aut numquam similique.
+        Id: 5625972352155160976
+        Member: Nihil debitis magnam dolorem qui praesentium iure.
+        PostDt: "1985-11-21T12:48:29Z"
+        RoomName: Eveniet voluptas quod qui.
+        UserId: Rem voluptates nam voluptatem rerum rerum neque.
+  securitySchemes:
+    api_key_header_Authorization:
+      type: apiKey
+      description: Secures endpoint by requiring an API key.
+      name: Authorization
+      in: header
+tags:
+- name: chatapi
+  description: The service performs get chat.
